Adds background elements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: #87CEEB; /* Light blue for the water */
+    background-image: url('../assets/New\ Aquarium.GIF'); /* Updated file name and path */
+    background-size: contain; /* Adjust as needed */
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .fish {
@@ -19,21 +23,51 @@ body {
     opacity: 1;
 }
 
-/* Style each fish individually */
-#fish1 {
-    background: url('../assets/Angel.GIF') no-repeat center center;
+.castle {
+    position: fixed;
+    width: 300px;
+    height: auto;
 }
 
-#fish2 {
-    background: url('../assets/Angler.GIF') no-repeat center center;
+.castle img {
+    width: 100%;
+    height: auto;
 }
 
-#fish3 {
-    background: url('../assets/Blue.GIF') no-repeat center center;
+.castle:nth-child(1) {
+    top: 50%;
+    left: 10%;
 }
 
-#fish4 {
-    background: url('../assets/Catfish.GIF') no-repeat center center;
+.kelp {
+    position: fixed;
+    width: 50px; /* Adjust the width of your kelp */
+    height: auto;
+}
+
+.kelp img {
+    width: 100%; /* Make sure the image fills the container */
+    height: auto;
+}
+
+.kelp:nth-child(1) {
+    top: 20%;
+    left: 10%;
+}
+
+.kelp:nth-child(2) {
+    top: 70%;
+    left: 60%;
+}
+
+.kelp:nth-child(3) {
+    top: 40%;
+    left: 30%;
+}
+
+.kelp:nth-child(4) {
+    top: 80%;
+    left: 80%;
 }
 
 /* Class for transition effect */
