Fish are transitioning properly, some won't flip

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ body {
     animation: fishAnimations 8s infinite;
 }
 
+.fish-flipped img {
+    transform: scaleX(-1);
+}
+
 .castle {
     position: fixed;
     width: 300px;
