--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
     align-items: flex-end; /* Align items to the bottom */
     justify-content: center;
     height: 100vh;
+    max-width: 100vw;
     margin: 0;
 }
 
