--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,28 @@
 /* styles.css */
-body {
+html, body {
+    height: 100%;
     margin: 0;
+}
+
+body {
     overflow: hidden;
-    padding: 0;
+}
+
+#top-bar {
+    position: absolute;
+    width: 100%;
+    height: 3rem;
+    background-color: #333;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1rem;
+    z-index: 12;
 }
 
 #aquarium-container {
     display: flex;
-    align-items: flex-end; /* Align items to the bottom */
+    align-items: flex-end;
     justify-content: center;
     height: 100vh;
     max-width: 100vw;
@@ -17,7 +32,7 @@ body {
 .aquarium-flex-container {
     position: relative;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #87CEEB;
     background-image: url('../assets/New-Aquarium.gif');
     background-size: cover;
