--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,14 @@ body {
         width: 20px;
         height: auto;
     }
+
+    #top-bar {
+        height: 4rem; /* Increase the height to provide more space for the top bar on mobile */
+        padding-right: 1rem; /* Adjust padding if needed */
+        z-index: 13; /* Adjust the z-index if needed */
+        position: fixed;
+        top: env(safe-area-inset-top); /* Adjust top based on safe area */
+    }
 }
 
 /* Mobile */
@@ -206,6 +214,13 @@ body {
         height: auto;
     }
 
+    #top-bar {
+        height: 4rem; /* Increase the height to provide more space for the top bar on mobile */
+        padding-right: 1rem; /* Adjust padding if needed */
+        z-index: 13; /* Adjust the z-index if needed */
+        position: fixed;
+        top: env(safe-area-inset-top); /* Adjust top based on safe area */
+    }
 }
 
 /* Tablets */
