--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,9 +1,17 @@
 /* dropdown.css */
 
+.selectors-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
 #checkboxes-container {
     display: flex;
-    justify-content: space-around; /* Adjust the spacing as needed */
     align-items: center;
+    gap: 10px; /* Adjust the gap between checkboxes as needed */
+    flex-grow: 1; /* Make the checkboxes container take up available space */
     background-color: rgba(25, 25, 25, .2);
 }
 
