--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
     width: 100vw;
     height: 100%;
     background-color: #87CEEB;
-    background-image: url('../assets/New-Aquarium.gif');
+    background-image: url('https://github.com/tlq68/e-quarium/blob/main/assets/New-Aquarium.gif?raw=true');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
